Fix data file path

--- a/feedforward-neural-network/feedforward_neural_network.ipynb
+++ b/feedforward-neural-network/feedforward_neural_network.ipynb
@@ -30,7 +30,7 @@
     "from pandas import DataFrame\n",
     "\n",
     "#df = pd.read_csv(\"asset/csv/mnist_train.csv\", sep=\",\")\n",
-    "df = pd.read_csv(\"http://repo.aiquanta.cloud/aiquanta/app/academic/machinelearning/introduction/appendix/asset/csv/latest/feedforward-neural-network-example-1.csv\", sep=\",\")\n",
+    "df = pd.read_csv(\"https://quantummc.xyz/wp-content/uploads/2020/08/feedforward-neural-network-example-1.csv\", sep=\",\")\n",
     "\n",
     "print(df)"
    ]
@@ -231,7 +231,7 @@
     "from pandas import DataFrame\n",
     "\n",
     "#df = pd.read_csv(\"asset/csv/mnist_test.csv\", sep=\",\")\n",
-    "df = pd.read_csv(\"http://repo.aiquanta.cloud/aiquanta/app/academic/machinelearning/introduction/appendix/asset/csv/latest/feedforward-neural-network-example-2.csv\", sep=\",\")\n"
+    "df = pd.read_csv(\"https://quantummc.xyz/wp-content/uploads/2020/08/feedforward-neural-network-example-2.csv\", sep=\",\")\n"
    ]
   },
   {
