--- a/multivariate-linear-regression/multivariate-linear-regression.ipynb
+++ b/multivariate-linear-regression/multivariate-linear-regression.ipynb
@@ -132,7 +132,7 @@
    ],
    "source": [
     "#df = pd.read_csv(\"asset/csv/retail92.csv\", sep=\",\")\n",
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/hylu666/hku-physics3151/master/multivariate-linear-regression/multivariate-linear-regression-example-1.csv\", sep=\",\")\n",
+    "df = pd.read_csv(\"multivariate-linear-regression-example-1.csv\", sep=\",\")\n",
     "pd.set_option('display.width', 100)\n",
     "print(df.head(10).append(df.tail(10)))"
    ]
@@ -664,7 +664,7 @@
    ],
    "source": [
     "#df = pd.read_csv(\"asset/csv/passenger1.csv\", sep=\",\")\n",
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/hylu666/hku-physics3151/master/multivariate-linear-regression/multivariate-linear-regression-example-2.csv\", sep=\",\")\n",
+    "df = pd.read_csv(\"multivariate-linear-regression-example-2.csv\", sep=\",\")\n",
     "pd.set_option('display.width', 120)\n",
     "print (df)"
    ]
@@ -980,7 +980,7 @@
    ],
    "source": [
     "#df = pd.read_csv(\"asset/csv/mlr02.csv\", sep=\",\")\n",
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/hylu666/hku-physics3151/master/multivariate-linear-regression/multivariate-linear-regression-example-3.csv\", sep=\",\")\n",
+    "df = pd.read_csv(\"multivariate-linear-regression-example-3.csv\", sep=\",\")\n",
     "pd.set_option('display.width', 120)\n",
     "print (df)"
    ]
@@ -1303,7 +1303,7 @@
     "import pandas as pd\n",
     "\n",
     "#df = pd.read_csv(\"asset/csv/Tombstone.csv\")\n",
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/hylu666/hku-physics3151/master/multivariate-linear-regression/multivariate-linear-regression-example-4.csv\", sep=\",\")\n",
+    "df = pd.read_csv(\"multivariate-linear-regression-example-4.csv\", sep=\",\")\n",
     "\n",
     "#Removing the label column\n",
     "df = df [['Modelled_SO2_Concentration','Surface_Recession_Rate']]\n",
